// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playlist component when does not have playlists renders nothing 1`] = `null`;

exports[`Playlist component when there is playlists renders default component 1`] = `
Array [
  <h3
    className="sc-htpNat bpiAFK"
  >
    Playlists
  </h3>,
  <div
    className="sc-bdVaJa juKbqn"
  >
    <button
      className="sc-gzVnrw bVZrSh"
      onClick={[Function]}
    >
      + add playlist
    </button>
    <div
      className="sc-bwzfXH iwEgFM"
    >
      <button
        className="sc-bxivhb dtoCMN"
        onClick={[Function]}
      >
        <img
          className="sc-ifAKCX kXFzZl"
          height="118"
          src="https://img.youtube.com/vi/MeSu5_Do8P8/default.jpg"
        />
      </button>
      <button
        className="sc-bxivhb dtoCMN"
        onClick={[Function]}
      >
        Add new videos!
        <div
          className="sc-EHOje tIvPg"
        >
          <span
            className="sc-bZQynM glHohg"
          >
            Play 
            0
             videos
          </span>
        </div>
      </button>
      <button
        className="sc-bxivhb dtoCMN"
        onClick={[Function]}
      >
        <img
          className="sc-ifAKCX kXFzZl"
          height="118"
          src="https://img.youtube.com/vi/qSeaR7Dqvdc/default.jpg"
        />
        <div
          className="sc-EHOje tIvPg"
        >
          <span
            className="sc-bZQynM glHohg"
          >
            Play 
            3
             videos
          </span>
        </div>
      </button>
      <button
        className="sc-bxivhb dtoCMN"
        onClick={[Function]}
      >
        <img
          className="sc-ifAKCX kXFzZl"
          height="118"
          src="https://img.youtube.com/vi/ykHiSn1K1E/default.jpg"
        />
        <div
          className="sc-EHOje tIvPg"
        >
          <span
            className="sc-bZQynM glHohg"
          >
            Play 
            1
             videos
          </span>
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Playlist component when there is playlists when does not have videos on playlist renders a placeholder message 1`] = `
Array [
  <h3
    className="sc-htpNat bpiAFK"
  >
    Playlists
  </h3>,
  <div
    className="sc-bdVaJa juKbqn"
  >
    <button
      className="sc-gzVnrw bVZrSh"
      onClick={[Function]}
    >
      + add playlist
    </button>
    <div
      className="sc-bwzfXH iwEgFM"
    >
      <button
        className="sc-bxivhb dtoCMN"
        onClick={[Function]}
      >
        Add new videos!
      </button>
    </div>
  </div>,
]
`;
